# CreateTogether

./: .clangd  .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  logo.psd  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
fb/: ccserialization.fbs  ctcursor.fbs  ctserialize.fbs
flatbuf/: CCSerialization.fbs  CTSerialization.fbs  GDSerialization.fbs  ccserialization.fbs  ctcursor.fbs  ctserialize.fbs  gdserialization.fbs
include/: ccserialization_generated.h  ctcursor_generated.h  ctserialize_generated.h  gdserialization_generated.h  isteamnetworkingsocketsfix.h  isteamnetworklessmessages.h  steamnetworkingfakeip.h  steamnetworklesstypes.h  steamworklessapi.h
include/UI/: UIBuildMacros.hpp  UIBuilder.hpp
include/createtogether/: Utills.hpp
include/createtogether/Networking/NetworkingBackends/: HasCapableBackend.hpp
include/debug/: isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  steam_api_common.h  steamclientpublic.h  steamnetworkingcustomsignaling.h  steamnetworkingsockets.h  steamnetworkingsockets_flat.h  steamnetworkingtypes.h
include/dedicated/: isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  steam_api_common.h  steamclientpublic.h  steamnetworkingcustomsignaling.h  steamnetworkingsockets.h  steamnetworkingsockets_flat.h  steamnetworkingtypes.h
protobuf/: createtogether.proto
src/: ActionTypes.hpp  LobbyData.hpp  LobbyPopup.cpp  LobbyPopup.hpp  ModifyCreatorLayer.cpp  ModifyEditorLayer.cpp  ModifyEditorLayer.hpp  UtilMacros.hpp  config.hpp  include.hpp  main.cpp
src/debug/: client.hpp  server.cpp
src/dedicated/: CMakeLists.txt  client.hpp  server.cpp
src/hooks/: ModifyColorSelectPopup.cpp  ModifyCreatorLayer.cpp  ModifyEditorLayer.cpp  ModifyEditorLayer.hpp  ModifyEditorPauseLayer.cpp  ModifyEditorUI.cpp  ModifyEditorUI.hpp  ModifyGameManager.cpp  ModifyGameManager.hpp  ModifyGameObject.cpp  ModifyGameObject.hpp  ModifyPulsePopup.cpp  ModifyTriggerPopup.cpp
src/hooks/EditorOptions/: ModifyLevelOptions.cpp  ModifyLevelOptionsLayer.cpp  ModifySelectArtLayer.cpp  ModifySelectSettingsLayer.cpp  ModifySongSelectNode.cpp  SelectSettingsLayer.cpp  nodelete
src/hooks/PlayLayer/: ModifyPauseLayer.cpp  ModifyPauseLayer.hpp  ModifyPlayLayer.hpp
src/layers/: LobbiesLayer.cpp  LobbiesLayer.hpp
src/networking/: HighLevelHeader.hpp  NetManager.cpp  NetManager.hpp  NetworkingHeaders.hpp  SteamCallbacks.cpp  SteamCallbacks.hpp  SteamManager.cpp  SteamManager.hpp
src/networking/cursor/: CursorManager.cpp  CursorManager.hpp
src/networking/highlevel/: NetRecv.cpp  NetRecv.hpp  NetSend.cpp  NetSend.hpp  SharedHighLevelHeaders.hpp
src/networking/optimization/: MassEditContainer.hpp
src/networking/scheduler/: NetworkScheduler.cpp  NetworkScheduler.hpp
src/serialization/: CommonSerialization.hpp
src/types/: ActionTypes.hpp  Cursor.cpp  Cursor.hpp  LobbyData.hpp  PlaceboMsg.hpp  UniqueID.hpp  UserDictionary.cpp  UserDictionary.hpp
src/ui/: LevelListBorder.cpp  LevelListBorder.hpp  LevelListBorders.cpp  LevelListBorders.hpp  LobbyList.cpp  LobbyList.hpp  LobbyPopup.cpp  LobbyPopup.hpp  WaitingForHostPopup.hpp  hostpopup.json
src/utils/: Singleton.hpp  Utills.cpp  Utills.hpp  utils.hpp
testingserver/: server.js
